@@ -24,7 +24,7 @@ export(Surv, aareg, agreg.fit,
        labels.survreg, match.ratetable, neardate,
        psurvreg, qsurvreg, dsurvreg,
        pspline, pyears, ratetable, ratetableDate, 
-       ridge, strata, survConcordance,
+       ridge, rsurvreg, strata, survConcordance,
        survSplit, survdiff, survexp,  survfit ,
        survfit.formula,
        survfitcoxph.fit, survfitKM, survfitCI,
