@@ -200,13 +200,13 @@ sum to zero.
 The weighted sum of each column of $U$ must zero (if computed correctly)
 and the weighted sum of squares for each column will be the infinitesimal
 jackknife estimate of variance for the elements of $p$.
-The entire variance-covariance matrix for the states is $U'WU$ where 
+The entire variance-covariance matrix for the states is $U'W^2U$ where 
 $W$ is a diagonal 
 matrix of weights, but we currently don't report that back.
 Note that this is for sampling weights.  
 If one has real case weights, where an integer weight of 2 means 2 observations
 that were collapsed in to one row of data to save space, then the
-formula is $U'W^2U$.  
+formula is $U'WU$.  
 Case weights were somewhat common in my youth, due to small computer memory,
 but I haven't seen such data in 20 years.
 
