@@ -1,0 +1,48 @@
+
+R Under development (unstable) (2016-05-06 r70588) -- "Unsuffered Consequences"
+Copyright (C) 2016 The R Foundation for Statistical Computing
+Platform: i686-pc-linux-gnu (32-bit)
+
+R is free software and comes with ABSOLUTELY NO WARRANTY.
+You are welcome to redistribute it under certain conditions.
+Type 'license()' or 'licence()' for distribution details.
+
+R is a collaborative project with many contributors.
+Type 'contributors()' for more information and
+'citation()' on how to cite R or R packages in publications.
+
+Type 'demo()' for some demos, 'help()' for on-line help, or
+'help.start()' for an HTML browser interface to help.
+Type 'q()' to quit R.
+
+> library(survival)
+> # Make sure that the old-style and new-style calls both work
+> 
+> # new style
+> vet2 <- survSplit(Surv(time, status) ~ ., data= veteran, cut=c(90, 180), 
++                   episode= "tgroup", id="id")
+> vet2[1:7, c("id", "tstart", "time", "status", "tgroup", "age", "karno")]
+  id tstart time status tgroup age karno
+1  1      0   72      1      1  69    60
+2  2      0   90      0      1  64    70
+3  2     90  180      0      2  64    70
+4  2    180  411      1      3  64    70
+5  3      0   90      0      1  38    60
+6  3     90  180      0      2  38    60
+7  3    180  228      1      3  38    60
+> 
+> # old style
+> vet3 <- survSplit(veteran, end='time', event='status', cut=c(90,180),
++                   episode="tgroup", id="id")
+> all.equal(vet2, vet3)
+[1] TRUE
+> 
+> all.equal(nrow(vet2), nrow(veteran) + sum(veteran$time >90) + 
++                       sum(veteran$time > 180))
+[1] TRUE
+> 
+> 
+> 
+> proc.time()
+   user  system elapsed 
+  1.128   0.088   1.212 
